# m8-file-parser

./: CHANGELOG.md  Cargo.toml  readme.md
examples/: read_song.rs
examples/songs/: DGLTMX.m8s  EMPTY65.m8s  README.md  TRACKEQ.m8s  V6_2EMPTY.m8s
examples/songs/CommandMappingV4/: CMDMAPPING_6_0.m8s  CMDMAPPING_6_2.m8s  CMDMAPPING_6_5.m8s
src/: eq.rs  fx.rs  lib.rs  param_gatherer.rs  remapper.rs  settings.rs  songs.rs  version.rs  writer.rs
src/instruments/: common.rs  external_inst.rs  fmsynth.rs  hypersynth.rs  macrosynth.rs  midi.rs  mod.rs  sampler.rs  wavsynth.rs
