[package]
name = "m8-file-parser"
description = "Parse the Dirtywave M8's file formats (from M8 FW version 4 to 6)"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/Twinside/m8-file-parser"
homepage = "https://github.com/Twinside/m8-file-parser"
license = "MIT"
keywords = ["music"]

[dependencies]
arr_macro = "0.2.1"
array-concat = "0.5.3"
byteorder = "1.4.3"
num_enum = "0.7.3"

[features]
# Used to fix warnings stemming from array-concat
# This can be removed when this bug is fixed: https://github.com/inspier/array-concat/pull/4
const_panic = []
